# interface_socket

./: CITATION.cff  CMakeLists.txt  README.md  package.xml  setup.py
config/: interface_socket_config.yaml
include/interface_socket/: ethernet_interface.hpp
launch/: interface_socket.launch
scripts/: clientteste.py  interface_node.py  interface_socket.py
src/: ethernet_interface.cpp  interface_socket.cpp  main.cpp
src/interface_socket/: ethernet_interface.py
